<resources>
    <string name="app_name">Home Workout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Stats</string>
    <string name="title_notifications">About</string>
    <string name="exercise1">exercise 1</string>
    <string name="exercise2">exercise 2</string>
    <string name="exercise3">exercise 3</string>
    <string name="exercise4">exercise 4</string>
    <string name="exercise5">exercise 5</string>
    <string name="exercise6">exercise 6</string>
    <string name="exercise7">exercise 7</string>
    <string name="exercise8">exercise 8</string>
    <string name="exercise9">exercise 9</string>
    <string name="exercise10">exercise 10</string>
    <string name="exercise11">exercise 11</string>
    <string name="exercise12">exercise 12</string>
    <string name="exercise13">exercise 13</string>
    <string name="exercise14">exercise 14</string>
    <string name="congrats_message">Congrats! You completed a random workout. Complete the daily task to add to your progress</string>
    <string name="congrats_message_2">Congrats! You completed the Daily workout. Head over to stats to see your progress</string>
    <string name="about_me">Hi I am Partha Prateem Patra. I am a sophomore student and I love developing apps. In addition to Android dev, I am into Machine Learning as well.</string>
    <string name="Time_taken">This project took 7 days to complete.</string>
    <string name="estimated_price">Hypothetical price estimation for the App</string>
    <string name="price">$80</string>
    <string name="videoLink">This app was created in response to the challenge posted by Hitesh Choudhary. Here is the <a href="https://www.youtube.com/watch?v=VFrKjhcTAzE">video</a></string>
</resources>