<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/developer_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@drawable/development_pana"
        />
    <ImageView
        android:id="@+id/profile_photo"
        android:layout_below="@+id/developer_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile_round2"
        />
    <androidx.cardview.widget.CardView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profile_photo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textSize="20sp"
                android:text="@string/about_me"
                />
            <TextView
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/Time_taken"/>
            <TextView
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/estimated_price"/>
            <TextView
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/video_link"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/videoLink"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



</RelativeLayout>